# shorty

./: Cargo.toml  Dockerfile  Readme.md  fly.toml  run.sh
migrations/2022-07-03-062450_create_links/: up.sql
src/: main.rs  models.rs  schema.rs
