[package]
name = "shorty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
